--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "randomstring": "^1.1.5",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.4",
+    "responsive-react": "^3.0.2"
   },
   "scripts": {
     "client": "react-scripts start",
