--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "responsive-react": "^3.0.2"
   },
   "scripts": {
-    "client": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
