--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "antd": "^3.25.1",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
+    "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.7.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.8.1",
@@ -28,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha './server/_test_/client.js'",
     "eject": "react-scripts eject",
     "server": "node ./server/app.js"
   },
@@ -46,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "request": "^2.88.0"
   }
 }
